<resources>
    <string name="app_name">FastFood</string>
    <string name="empty_string" />
    <string name="home">Home</string>
    <string name="filter">Filter</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="category_image">Category Image</string>
    <string name="product_image">Product Image</string>
    <string name="economic_menu">Economic Menu</string>
    <string name="product_title">Product Title</string>
    <string name="product_description">Product Description</string>
    <string name="selling_price">123,40 ₺</string>
    <string name="price_suffix">₺</string>
    <string name="sold_out">Sold out</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="product_name">Product name</string>
    <string name="price">Price</string>
    <string name="sort">Sort</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="sort_dialog_title">Choose sorting type</string>
    <string name="sort_dialog_exception_message">Activity cannot be null</string>
    
    <string-array name="sorting_types">
        <item>Price</item>
        <item>Title</item>
        <item>PublishmentDate</item>
    </string-array>
</resources>