<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/product_image"
        android:src="@drawable/blank_product_detail_image" />

    <ImageView
        android:layout_width="72dp"
        android:layout_height="36dp"
        android:layout_marginEnd="@dimen/space_medium"
        android:contentDescription="@string/sold_out"
        android:src="@drawable/sold_out"
        android:visibility="gone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_medium"
        android:layout_marginTop="@dimen/space_medium"
        android:layout_marginEnd="@dimen/space_medium"
        android:text="@string/product_title"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_medium"
        android:layout_marginTop="@dimen/space_medium"
        android:layout_marginEnd="@dimen/space_medium"
        android:text="@string/price"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_medium"
        android:layout_marginTop="@dimen/space_medium"
        android:layout_marginEnd="@dimen/space_medium"
        android:text="@string/product_description" />

</LinearLayout>