<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/space_medium"
        app:layout_constraintBottom_toTopOf="@id/button_buy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".ui.home.productdetail.ProductDetailFragment">

            <ImageView
                android:id="@+id/imageView_product_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/product_image"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/imageView_sold_out"
                android:layout_width="72dp"
                android:layout_height="36dp"
                android:layout_marginEnd="@dimen/space_medium"
                android:contentDescription="@string/sold_out"
                android:src="@drawable/sold_out"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView_product_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_medium"
                android:layout_marginTop="@dimen/space_medium"
                android:layout_marginEnd="@dimen/space_medium"
                android:textSize="16sp"
                tools:text="@string/product_title" />

            <TextView
                android:id="@+id/textView_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_medium"
                android:layout_marginTop="@dimen/space_medium"
                android:layout_marginEnd="@dimen/space_medium"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/price" />

            <TextView
                android:id="@+id/textView_product_campaign_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_medium"
                android:layout_marginTop="@dimen/space_medium"
                android:layout_marginEnd="@dimen/space_medium"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone"
                tools:text="@string/price" />

            <TextView
                android:id="@+id/textView_product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_medium"
                android:layout_marginTop="@dimen/space_medium"
                android:layout_marginEnd="@dimen/space_medium"
                tools:text="@string/product_description" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_medium"
        android:text="@string/add_to_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>